Agregado componente de selección de moneda

--- a/angular.json
+++ b/angular.json
@@ -21,11 +21,13 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
               }
-            ],
+            ]
+            ,
             "styles": [
                 "src/assets/css/normalize.css",
                 "src/assets/css/skeleton.css",
